--- a/po/de.po
+++ b/po/de.po
@@ -22,7 +22,7 @@ msgstr ""
 "PO-Revision-Date: 2013-09-14 12:07+0200\n"
 "Last-Translator: Tobias Endrigkeit <tobiasendrigkeit@outlook.com>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
-"Language: de_DE\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
