--- a/po/fr.po
+++ b/po/fr.po
@@ -31,7 +31,7 @@ msgstr ""
 "PO-Revision-Date: 2013-09-16 23:02+0200\n"
 "Last-Translator: Alain Lojewski <allomervan@gmail.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
