--- a/po/pl.po
+++ b/po/pl.po
@@ -1,39 +1,35 @@
-# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-# Aviary.pl
-# Jeśli masz jakiekolwiek uwagi odnoszące się do tłumaczenia lub chcesz
-# pomóc w jego rozwijaniu i pielęgnowaniu, napisz do nas:
-# gnomepl@aviary.pl
-# -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Polish translation for telepathy-account-widgets.
+# Copyright © 2003-2016 the telepathy-account-widgets authors.
+# This file is distributed under the same license as the telepathy-account-widgets package.
 # Artur Flinta <aflinta@at.kernel.pl>, 2003.
 # Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009.
 # Wadim Dziedzic <wdziedzic@aviary.pl>, 2008.
 # Piotr Drąg <piotrdrag@gmail.com>, 2009-2016.
 # Asia Słowik <asiaslowik@gmail.com>, 2011.
-# Aviary.pl <gnomepl@aviary.pl>, 2007-2016.
+# Aviary.pl <community-poland@mozilla.org>, 2007-2016.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: telepathy-account-widgets\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-11 11:30+0200\n"
-"PO-Revision-Date: 2016-07-11 11:32+0200\n"
+"POT-Creation-Date: 2016-08-22 20:11+0200\n"
+"PO-Revision-Date: 2016-08-22 20:12+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
-"Language-Team: Polish <gnomepl@aviary.pl>\n"
+"Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Language: Polish\n"
-"X-Poedit-Country: Poland\n"
 
 #: ../data/org.gnome.telepathy-account-widgets.gschema.xml.h:1
 msgid "Default directory to select an avatar image from"
-msgstr "Domyślny katalog, z którego są wybierane awatary"
+msgstr "Domyślny katalog, z którego są wybierane awatary"
 
 #: ../data/org.gnome.telepathy-account-widgets.gschema.xml.h:2
 msgid "The last directory that an avatar image was chosen from."
-msgstr "Ostatni katalog, z którego był wybierany awatar."
+msgstr "Ostatni katalog, z którego był wybierany awatar."
 
 #: ../tp-account-widgets/totem-subtitle-encoding.c:157
 msgid "Current Locale"
@@ -388,12 +384,12 @@ msgstr "Usuń"
 #. Translators: tooltip on a
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:6
 msgid "Up"
-msgstr "W górę"
+msgstr "W górę"
 
 #. Translators: tooltip on a
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:8
 msgid "Down"
-msgstr "W dół"
+msgstr "W dół"
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:9
 msgid "Servers"
@@ -404,7 +400,7 @@ msgid ""
 "Most IRC servers don't need a password, so if you're not sure, don't enter a "
 "password."
 msgstr ""
-"Większość serwerów IRC nie wymaga hasła, więc w razie niepewności nie należy "
+"Większość serwerów IRC nie wymaga hasła, więc w razie niepewności nie należy "
 "go podawać."
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:11
@@ -417,7 +413,7 @@ msgstr "Komunikat podczas zakończenia"
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:14
 msgid "Real name"
-msgstr "Imię i nazwisko"
+msgstr "Imię i nazwisko"
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:15
 msgid "Username"
@@ -443,7 +439,7 @@ msgid ""
 "Use <a href=\"http://www.facebook.com/username/\">this page</a> to choose a "
 "Facebook username if you don't have one."
 msgstr ""
-"To jest nazwa użytkownika, a nie login serwisu Facebook.\n"
+"To jest nazwa użytkownika, a nie login serwisu Facebook.\n"
 "Jeśli używane jest facebook.com/<b>badger</b>, należy wpisać <b>badger</b>.\n"
 "Należy użyć <a href=\"http://www.facebook.com/username/\">tej strony</a>, "
 "aby wybrać nazwę użytkownika serwisu Facebook, jeśli jeszcze jej nie "
@@ -576,7 +572,7 @@ msgstr "<b>Przykład:</b> użytkownik@mój.serwer.sip"
 
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:5
 msgid "Use this account to call _landlines and mobile phones"
-msgstr "Użycie tego konta do połączeń na telefony _stacjonarne i komórkowe"
+msgstr "Użycie tego konta do połączeń na telefony _stacjonarne i komórkowe"
 
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:6
 msgid "NAT Traversal Options"
@@ -652,7 +648,7 @@ msgstr "Id_entyfikator Yahoo!:"
 
 #: ../tp-account-widgets/tpaw-account-widget-yahoo.ui.h:5
 msgid "I_gnore conference and chat room invitations"
-msgstr "Ig_norowanie zaproszeń konferencyjnych i pokoi rozmów"
+msgstr "Ig_norowanie zaproszeń konferencyjnych i pokoi rozmów"
 
 #: ../tp-account-widgets/tpaw-account-widget-yahoo.ui.h:6
 msgid "_Room List locale:"
@@ -682,7 +678,7 @@ msgstr "Nie można skonwertować obrazu"
 #: ../tp-account-widgets/tpaw-avatar-chooser.c:588
 msgid "None of the accepted image formats are supported on your system"
 msgstr ""
-"Żaden z akceptowanych formatów obrazu nie jest obsługiwany przez ten system"
+"Żaden z akceptowanych formatów obrazu nie jest obsługiwany przez ten system"
 
 #: ../tp-account-widgets/tpaw-avatar-chooser.c:948
 msgid "Couldn't save picture to file"
@@ -718,7 +714,7 @@ msgstr "_Wybierz"
 
 #: ../tp-account-widgets/tpaw-contactinfo-utils.c:97
 msgid "Full Name"
-msgstr "Imię i nazwisko"
+msgstr "Imię i nazwisko"
 
 #: ../tp-account-widgets/tpaw-contactinfo-utils.c:98
 msgid "Phone Number"
@@ -884,7 +880,7 @@ msgstr[2] "%d miesięcy emu"
 
 #: ../tp-account-widgets/tpaw-time.c:138
 msgid "in the future"
-msgstr "w przyszłości"
+msgstr "w przyszłości"
 
 #: ../tp-account-widgets/tpaw-user-info.c:433
 msgid "Go online to edit your personal information."
@@ -892,7 +888,7 @@ msgstr "Proszę przejść do trybu online, aby modyfikować informacje osobiste.
 
 #: ../tp-account-widgets/tpaw-user-info.c:517
 msgid "These details will be shared with other users on this chat network."
-msgstr "Te informacje będą widoczne dla innych użytkowników w tej sieci."
+msgstr "Te informacje będą widoczne dla innych użytkowników w tej sieci."
 
 #. Setup id label
 #: ../tp-account-widgets/tpaw-user-info.c:526
@@ -910,7 +906,7 @@ msgstr "<b>Informacje osobiste</b>"
 
 #: ../tp-account-widgets/tpaw-utils.c:118
 msgid "People Nearby"
-msgstr "Osoby w pobliżu"
+msgstr "Osoby w pobliżu"
 
 #: ../tp-account-widgets/tpaw-utils.c:123
 msgid "Yahoo! Japan"
