--- a/po/lv.po
+++ b/po/lv.po
@@ -8,23 +8,23 @@
 # Peteris Krisjanis <pecisk@gmail.com>, 2010.
 # Rudolfs <rudolfs.mazurs@gmail.com>, 2011.
 # Rūdofls Mazurs <rudolfs.mazurs@gmail.com>, 2011, 2012.
-# Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>, 2009, 2010, 2012, 2013.
+# Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>, 2009, 2010, 2012, 2013, 2016.
 msgid ""
 msgstr ""
 "Project-Id-Version: lv\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=empathy&keywords=I18N+L10N&component=tp-aw\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=empathy"
+"&keywords=I18N+L10N&component=tp-aw\n"
 "POT-Creation-Date: 2016-10-06 16:07+0000\n"
-"PO-Revision-Date: 2013-09-12 11:52+0300\n"
+"PO-Revision-Date: 2016-10-09 19:06+0200\n"
 "Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "Language: lv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
-"2);\n"
-"X-Generator: Lokalize 1.5\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 :"
+" 2);\n"
+"X-Generator: Lokalize 2.0\n"
 
 #: ../data/org.gnome.telepathy-account-widgets.gschema.xml.h:1
 msgid "Default directory to select an avatar image from"
@@ -399,7 +399,6 @@ msgid "Servers"
 msgstr "Serveris"
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:10
-#, fuzzy
 #| msgid ""
 #| "Most IRC servers don't need a password, so if you're not sure, don't "
 #| "enter a password."
@@ -440,7 +439,6 @@ msgstr "Kāds ir jūsu Facebook lietotāja vārds?"
 
 #. This string is not wrapped in the dialog so you may have to add some
 #: ../tp-account-widgets/tpaw-account-widget-jabber.ui.h:3
-#, fuzzy
 #| msgid ""
 #| "This is your username, not your normal Facebook login.\n"
 #| "If you are facebook.com/<b>badger</b>, enter <b>badger</b>.\n"
@@ -684,7 +682,6 @@ msgstr "Kāda ir jūsu Yahoo! parole?"
 
 #: ../tp-account-widgets/tpaw-avatar-chooser.c:587
 #: ../tp-account-widgets/tpaw-avatar-chooser.c:672
-#, fuzzy
 #| msgid "Couldn't convert image"
 msgid "Couldn’t convert image"
 msgstr "Neizdevās pārveidot attēlu"
