--- a/po/es.po
+++ b/po/es.po
@@ -2,16 +2,17 @@
 # Copyright (C) 2003 Free Software Foundation
 # This file is distributed under the same license as the Gossip package.
 # Jorge González <jorgegonz@svn.gnome.org>, 2007, 2008, 2009, 2010, 2011.
-# Daniel Mustieles <daniel.mustieles@gmail.com>, 2010, 2011, 2012, 2013.
+# Daniel Mustieles <daniel.mustieles@gmail.com>, 2010, 2011, 2012, 2013, 2016.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: empathy.master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-06 14:17+0000\n"
-"PO-Revision-Date: 2013-08-27 18:17+0200\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=empathy&keywords=I18N+L10N&component=tp-aw\n"
+"POT-Creation-Date: 2016-10-06 16:07+0000\n"
+"PO-Revision-Date: 2016-12-20 17:01+0100\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
-"Language-Team: Español; Castellano <gnome-es-list@gnome.org>\n"
+"Language-Team: es <gnome-es-list@gnome.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -258,46 +259,46 @@ msgstr "¿Cuál es su nombre en pantalla para AIM?"
 msgid "What is your AIM password?"
 msgstr "¿Cuál es su contraseña de AIM?"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:671
+#: ../tp-account-widgets/tpaw-account-widget.c:669
 msgid "Account"
 msgstr "Cuenta"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:672
+#: ../tp-account-widgets/tpaw-account-widget.c:670
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:12
 msgid "Password"
 msgstr "Contraseña"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:673
+#: ../tp-account-widgets/tpaw-account-widget.c:671
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:12
 #: ../tp-account-widgets/tpaw-irc-network-dialog.c:500
 msgid "Server"
 msgstr "Servidor"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:674
+#: ../tp-account-widgets/tpaw-account-widget.c:672
 #: ../tp-account-widgets/tpaw-account-widget-sip.ui.h:20
 #: ../tp-account-widgets/tpaw-irc-network-dialog.c:521
 msgid "Port"
 msgstr "Puerto"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:758
+#: ../tp-account-widgets/tpaw-account-widget.c:756
 #, c-format
 msgid "%s"
 msgstr "%s"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:815
+#: ../tp-account-widgets/tpaw-account-widget.c:813
 #, c-format
 msgid "%s:"
 msgstr "%s:"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:1405
+#: ../tp-account-widgets/tpaw-account-widget.c:1403
 msgid "Username:"
 msgstr "Nombre de usuario:"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:1732
+#: ../tp-account-widgets/tpaw-account-widget.c:1730
 msgid "A_dd"
 msgstr "Aña_dir"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:1740
+#: ../tp-account-widgets/tpaw-account-widget.c:1738
 msgid "A_pply"
 msgstr "A_plicar"
 
@@ -306,19 +307,19 @@ msgstr "A_plicar"
 #. * like: "MyUserName on freenode".
 #. * You should reverse the order of these arguments if the
 #. * server should come before the login id in your locale.
-#: ../tp-account-widgets/tpaw-account-widget.c:2169
+#: ../tp-account-widgets/tpaw-account-widget.c:2176
 #, c-format
 msgid "%1$s on %2$s"
 msgstr "%1$s en %2$s"
 
 #. To translators: The parameter is the protocol name. The resulting
 #. * string will be something like: "Jabber Account"
-#: ../tp-account-widgets/tpaw-account-widget.c:2195
+#: ../tp-account-widgets/tpaw-account-widget.c:2203
 #, c-format
 msgid "%s Account"
 msgstr "Cuenta de %s"
 
-#: ../tp-account-widgets/tpaw-account-widget.c:2199
+#: ../tp-account-widgets/tpaw-account-widget.c:2207
 msgid "New account"
 msgstr "Cuenta nueva"
 
@@ -377,12 +378,12 @@ msgstr "Añadir…"
 msgid "Remove"
 msgstr "Quitar"
 
-#. Translators: tooltip on a 'Go Up' button used to sort IRC servers by priority
+#. Translators: tooltip on a
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:6
 msgid "Up"
 msgstr "Subir"
 
-#. Translators: tooltip on a 'Go Down' button used to sort IRC servers by priority
+#. Translators: tooltip on a
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:8
 msgid "Down"
 msgstr "Abajo"
@@ -392,12 +393,15 @@ msgid "Servers"
 msgstr "Servidores"
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:10
+#| msgid ""
+#| "Most IRC servers don't need a password, so if you're not sure, don't "
+#| "enter a password."
 msgid ""
-"Most IRC servers don't need a password, so if you're not sure, don't enter a "
+"Most IRC servers don’t need a password, so if you’re not sure, don’t enter a "
 "password."
 msgstr ""
-"La mayoría de los servidores IRC no necesitan una contraseña, de tal forma "
-"que si no está seguro, no introduzca una contraseña."
+"La mayoría de los servidores IRC no necesitan una contraseña, por lo que si "
+"no está seguro, no introduzca una contraseña."
 
 #: ../tp-account-widgets/tpaw-account-widget-irc.ui.h:11
 msgid "Nickname"
@@ -427,13 +431,18 @@ msgstr "¿Cuál es su apodo del IRC?"
 msgid "What is your Facebook username?"
 msgstr "¿Cuál es su usuario de Facebook?"
 
-#. This string is not wrapped in the dialog so you may have to add some '\n' to make it look nice.
+#. This string is not wrapped in the dialog so you may have to add some
 #: ../tp-account-widgets/tpaw-account-widget-jabber.ui.h:3
+#| msgid ""
+#| "This is your username, not your normal Facebook login.\n"
+#| "If you are facebook.com/<b>badger</b>, enter <b>badger</b>.\n"
+#| "Use <a href=\"http://www.facebook.com/username/\">this page</a> to choose "
+#| "a Facebook username if you don't have one."
 msgid ""
 "This is your username, not your normal Facebook login.\n"
 "If you are facebook.com/<b>badger</b>, enter <b>badger</b>.\n"
 "Use <a href=\"http://www.facebook.com/username/\">this page</a> to choose a "
-"Facebook username if you don't have one."
+"Facebook username if you don’t have one."
 msgstr ""
 "Este es su nombre de usuario, no su inicio de sesión normal en Facebook.\n"
 "Si es facebook.com/<b>usuario</b>, introduzca <b>usuario</b>.\n"
@@ -665,43 +674,48 @@ msgstr "¿Cuál es su ID de Yahoo!?"
 msgid "What is your Yahoo! password?"
 msgstr "¿Cuál es su contraseña de Yahoo!?"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:581
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:666
-msgid "Couldn't convert image"
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:587
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:672
+#| msgid "Couldn't convert image"
+msgid "Couldn’t convert image"
 msgstr "No se pudo convertir la imagen"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:582
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:588
 msgid "None of the accepted image formats are supported on your system"
 msgstr ""
 "No se ha encontrado den su sistema ninguno de los formatos de imagen "
 "soportados"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:942
-msgid "Couldn't save picture to file"
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:948
+#| msgid "Couldn't save picture to file"
+msgid "Couldn’t save picture to file"
 msgstr "No se pudo guardar la imagen en un archivo"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:1064
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1070
 msgid "Select Your Avatar Image"
 msgstr "Seleccione la imagen de su avatar"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:1073
-msgid "Take a picture..."
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1079
+#| msgid "Take a picture..."
+msgid "Take a picture…"
 msgstr "Hacer una foto…"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:1086
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1092
 msgid "No Image"
 msgstr "Sin imagen"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:1145
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1151
 msgid "Images"
 msgstr "Imagenes"
 
-#: ../tp-account-widgets/tpaw-avatar-chooser.c:1149
+#: ../tp-account-widgets/tpaw-avatar-chooser.c:1155
 msgid "All Files"
 msgstr "Todos los archivos"
 
 #: ../tp-account-widgets/tpaw-calendar-button.c:63
-msgid "Select..."
+#| msgctxt "verb displayed on a button to select an IRC network"
+#| msgid "Select"
+msgid "Select…"
 msgstr "Seleccionar…"
 
 #: ../tp-account-widgets/tpaw-calendar-button.c:151
@@ -814,7 +828,8 @@ msgstr "Contraseña de la cuenta IM para %s (%s)"
 
 #: ../tp-account-widgets/tpaw-keyring.c:621
 #, c-format
-msgid "Password for chatroom '%s' on account %s (%s)"
+#| msgid "Password for chatroom '%s' on account %s (%s)"
+msgid "Password for chatroom “%s” on account %s (%s)"
 msgstr "Contraseña para la sala de chat «%s» en la cuenta %s (%s)"
 
 #. Create account
@@ -909,6 +924,9 @@ msgstr "Google Talk"
 #: ../tp-account-widgets/tpaw-utils.c:160
 msgid "Facebook Chat"
 msgstr "Chat de Facebook"
+
+#~ msgid "Select..."
+#~ msgstr "Seleccionar…"
 
 #~ msgid "Remember Password"
 #~ msgstr "Recordar contraseña"
